priv/templates/deploy.yml
## DONOT EDIT UNLESS YOU KNOW WHAT YOU ARE DOING ##
kind: Deployment
apiVersion: apps/v1
metadata:
  name: APP_NAME-UID
  namespace: discovery
  annotations: 
    app_id: "APP_NAME"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: APP_NAME-UID
  template:
    metadata:
      labels:
        app: APP_NAME-UID
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: discovery-sa
      containers:
      - name: APP_NAME
        image: APP_IMAGE
        ports:
        - containerPort: 3245
          protocol: TCP
          name: APP_NAME-port
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 500Mi
            cpu: 500m
      imagePullSecrets:
      - name: dockerhub-auth-discovery
