priv/templates/service.yml
## DONOT EDIT UNLESS YOU KNOW WHAT YOU ARE DOING ##
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME-UID
  namespace: discovery
spec:
  ports:
  - port: 80
    targetPort: 3245
    protocol: TCP
    name: APP_NAME-service-port
  selector:
    app: APP_NAME-UID
